Added strong and em to steps in pancake.html

--- a/odin-recipes/recipes/pancake.html
+++ b/odin-recipes/recipes/pancake.html
@@ -26,11 +26,13 @@
     <h3>Steps</h3>
     <ol>
         <li>Add the flour, eggs, milk, sparkling water and salt to a bowl and mix thoroughly</li>
-        <li>Once mixed, slowly add the oil in a continous thin stream while mixing</li>
+        <li>Once mixed, <strong>slowly</strong> add the oil in a continous thin stream <em>while mixing</em></li>
         <li>If the pancake mix is too thick, add some milk. If it is too runny, add some flour</li>
-        <li>Preheat non-stick pan, and add a tiny drop of oil. You only need oil for the first pancake! (Because there is oil in the mixture)</li>
+        <li>Preheat <strong>non-stick pan</strong>, and add a tiny drop of oil. You only need oil for the first pancake! (Because there is oil in the mixture)</li>
         <li>When the first side hardens, flip to other side</li>
         <li>When the other side hardens, you're done :)</li>
     </ol>
+
+    <a href="../index.html">Return to Homepage</a>
 </body>
 </html>
