Added CSS styling

--- a/odin-recipes/recipes/pancake.html
+++ b/odin-recipes/recipes/pancake.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Pancake Recipe</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1>Pancake Recipe</h1>
@@ -14,7 +15,7 @@
     </p>
 
     <h3>Ingredients</h3>
-    <ul>
+    <ul class="ingred">
         <li>Flour - 200 g</li>
         <li>Eggs - 2 pcs</li>
         <li>Milk - 0,3 l</li>
@@ -24,7 +25,7 @@
     </ul>
     
     <h3>Steps</h3>
-    <ol>
+    <ol class="recipe">
         <li>Add the flour, eggs, milk, sparkling water and salt to a bowl and mix thoroughly</li>
         <li>Once mixed, <strong>slowly</strong> add the oil in a continous thin stream <em>while mixing</em></li>
         <li>If the pancake mix is too thick, add some milk. If it is too runny, add some flour</li>
